Up sdk folder and change readme first time