@@ -1,1 +1,4 @@
 # LingoBox-old
+## How to use :
+### 1. Move the javafx-sdk-15.0.1 folder to Drive C:\
+### 2. Just open Windows Shell on folder : out/artifacts/LingoBox_jar and type code : java --module-path C:\javafx-sdk-15.0.1\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar LingoBox.jar
